WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
192888
[WebRTC][GStreamer] fast/mediastream/resize-trim.html is failing
https://bugs.webkit.org/show_bug.cgi?id=192888
Summary
[WebRTC][GStreamer] fast/mediastream/resize-trim.html is failing
Alicia Boya García
Reported
2018-12-19 16:03:35 PST
New failing test: fast/mediastream/resize-letterbox.html --- /home/buildbot/wpe/wpe-linux-64-release-tests/build/layout-test-results/fast/mediastream/resize-letterbox-expected.txt +++ /home/buildbot/wpe/wpe-linux-64-release-tests/build/layout-test-results/fast/mediastream/resize-letterbox-actual.txt @@ -1,4 +1,4 @@ -PASS Video frames are resized in letterbox-mode when captured at non-native size. +FAIL Video frames are resized in letterbox-mode when captured at non-native size. promise_test: Unhandled rejection with value: object "Error: Invalid constraint"
Attachments
Patch
(11.31 KB, patch)
2021-05-03 08:13 PDT
,
Philippe Normand
no flags
Details
Formatted Diff
Diff
Patch
(11.34 KB, patch)
2021-05-03 08:14 PDT
,
Philippe Normand
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Philippe Normand
Comment 1
2021-05-03 08:13:30 PDT
Created
attachment 427559
[details]
Patch
Philippe Normand
Comment 2
2021-05-03 08:14:47 PDT
Created
attachment 427560
[details]
Patch
EWS
Comment 3
2021-05-04 04:13:44 PDT
Committed
r276953
(
237286@main
): <
https://commits.webkit.org/237286@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 427560
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug