Source/WebCore/platform/graphics/gstreamer/MediaSampleGStreamer.cpp
@@ -97,15 +97,18 @@ Ref<MediaSampleGStreamer> MediaSampleGStreamer::createFakeSample(GstCaps*, Media
     return adoptRef(*gstreamerMediaSample);
 }
 
-Ref<MediaSampleGStreamer> MediaSampleGStreamer::createImageSample(Vector<uint8_t>&& bgraData, unsigned width, unsigned height, double frameRate)
+Ref<MediaSampleGStreamer> MediaSampleGStreamer::createImageSample(Vector<uint8_t>&& bgraData, const IntSize& size, const IntSize& destinationSize, double frameRate)
 {
     ensureGStreamerInitialized();
 
-    size_t size = bgraData.sizeInBytes();
+    size_t sizeInBytes = bgraData.sizeInBytes();
     auto* data = bgraData.releaseBuffer().leakPtr();
-    auto buffer = adoptGRef(gst_buffer_new_wrapped_full(GST_MEMORY_FLAG_READONLY, data, size, 0, size, data, [](gpointer data) {
+    auto buffer = adoptGRef(gst_buffer_new_wrapped_full(GST_MEMORY_FLAG_READONLY, data, sizeInBytes, 0, sizeInBytes, data, [](gpointer data) {
         WTF::VectorMalloc::free(data);
     }));
+
+    auto width = size.width();
+    auto height = size.height();
     gst_buffer_add_video_meta(buffer.get(), GST_VIDEO_FRAME_FLAG_NONE, GST_VIDEO_FORMAT_BGRA, width, height);
 
     int frameRateNumerator, frameRateDenominator;
@@ -114,6 +117,29 @@ Ref<MediaSampleGStreamer> MediaSampleGStreamer::createImageSample(Vector<uint8_t
     auto caps = adoptGRef(gst_caps_new_simple("video/x-raw", "format", G_TYPE_STRING, "BGRA", "width", G_TYPE_INT, width,
         "height", G_TYPE_INT, height, "framerate", GST_TYPE_FRACTION, frameRateNumerator, frameRateDenominator, nullptr));
     auto sample = adoptGRef(gst_sample_new(buffer.get(), caps.get(), nullptr, nullptr));
+
+    // Optionally resize the video frame to fit destinationSize. This code path is used mostly by
+    // the mock realtime video source when the gUM constraints specifically required exact width
+    // and/or height values.
+    if (!destinationSize.isZero()) {
+        GstVideoInfo inputInfo;
+        gst_video_info_from_caps(&inputInfo, caps.get());
+
+        width = destinationSize.width();
+        height = destinationSize.height();
+        auto outputCaps = adoptGRef(gst_caps_new_simple("video/x-raw", "format", G_TYPE_STRING, "BGRA", "width", G_TYPE_INT, width,
+            "height", G_TYPE_INT, height, "framerate", GST_TYPE_FRACTION, frameRateNumerator, frameRateDenominator, nullptr));
+        GstVideoInfo outputInfo;
+        gst_video_info_from_caps(&outputInfo, outputCaps.get());
+
+        auto outputBuffer = adoptGRef(gst_buffer_new_allocate(nullptr, GST_VIDEO_INFO_SIZE(&outputInfo), nullptr));
+        gst_buffer_add_video_meta(outputBuffer.get(), GST_VIDEO_FRAME_FLAG_NONE, GST_VIDEO_FORMAT_BGRA, width, height);
+        GUniquePtr<GstVideoConverter> converter(gst_video_converter_new(&inputInfo, &outputInfo, nullptr));
+        GstMappedFrame inputFrame(gst_sample_get_buffer(sample.get()), inputInfo, GST_MAP_READ);
+        GstMappedFrame outputFrame(outputBuffer.get(), outputInfo, GST_MAP_WRITE);
+        gst_video_converter_frame(converter.get(), inputFrame.get(), outputFrame.get());
+        sample = adoptGRef(gst_sample_new(outputBuffer.get(), outputCaps.get(), nullptr, nullptr));
+    }
     return create(WTFMove(sample), FloatSize(width, height), { });
 }
 
